<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="aschantz.minesweeper.MinesweeperActivity">

        <aschantz.minesweeper.View.MinesweeperView
            android:id="@+id/gameView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/shimmer_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="10sp"
                android:layout_gravity="center"
                android:text="@string/titleWelcome"/>
        </com.facebook.shimmer.ShimmerFrameLayout>


        <Button
            android:id="@+id/btnRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buttonRestart" />

        <ToggleButton
            android:id="@+id/toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textOn="@string/toggleFlag"
            android:textOff="@string/toggleTry"/>

        <ToggleButton
            android:id="@+id/numbersSurround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textOn="@string/numberIndividual"
            android:textOff="@string/numberSurround"/>

        <ToggleButton
            android:id="@+id/showBombs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textOn="@string/showBombs"
            android:textOff="@string/hideBombs"/>



    </LinearLayout>
</ScrollView>