<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="aschantz.minesweeper.LearnActivity">

    <TextView
        android:id="@+id/learnTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/learnWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/learnParagraph"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learnParagraph"/>

    <TextView
        android:id="@+id/learnNumberDisplay"
        android:layout_width="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_height="wrap_content"
        android:text="@string/learnNumberDisplay"/>

    <TextView
        android:id="@+id/learnReset"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learnReset"/>



    <View android:id="@+id/emiter_top_left"
        android:layout_gravity="left"
        android:layout_marginTop="-20dp"
        android:layout_width="1dp"
        android:layout_height="1dp" />

    <View android:id="@+id/emiter_top_right"
        android:layout_gravity="top|right"
        android:layout_marginTop="-20dp"
        android:layout_width="1dp"
        android:layout_height="1dp" />


</LinearLayout>
